--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 *.swo
 *~
 
-.kiro/skill/gnucash-import/references/accounts.md
+.kiro/skill/gnucash-import/references/accounts.json
 .kiro/skill/gnucash-import/references/personal.md
 
 tmp/
