refactor: migrate personal settings to JSON format
- Change personal.md to personal.json in gitignore
- Update Suica importer to load nearest_station from JSON
- Simplify usage instructions by removing manual NEAREST_STATION edit

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 *~
 
 .kiro/skill/gnucash-import/references/accounts.json
-.kiro/skill/gnucash-import/references/personal.md
+.kiro/skill/gnucash-import/references/personal.json
 
 tmp/
