chore(.gitignore): add Python cache directory to ignore list
- Add __pycache__/ to gitignore to exclude Python bytecode cache files
- Prevents accidental commits of compiled Python files across the project

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@
 .kiro/skills/gnucash-import/references/account-uuid-cache.json
 .kiro/skills/gnucash-import/references/personal.json
 
+__pycache__/
 tmp/
